crates/serpen/tests/snapshots/stickytape_compatibility_tests__bundled_explicit_relative_import_in_init.snap
---
source: crates/serpen/tests/stickytape_compatibility_tests.rs
description: Bundled content for explicit_relative_import_in_init
---
#!/usr/bin/env python3
# Generated by Serpen - Python Source Bundler
# https://github.com/tinovyatkin/serpen

# ─ Module: greetings.greeting ─
message = "Hello"

# ─ Module: greetings ─
import types
greetings = types.ModuleType('greetings')
exec('message = message\n__all__ = ["message"]', globals(), greetings.__dict__)

# ─ Entry Module: hello ─
print(greetings.message)
