crates/serpen/tests/snapshots/stickytape_compatibility_tests__bundled_explicit_relative_import_single_dot.snap
---
source: crates/serpen/tests/stickytape_compatibility_tests.rs
description: Bundled content for explicit_relative_import_single_dot
---
#!/usr/bin/env python3
# Generated by Serpen - Python Source Bundler
# https://github.com/tinovyatkin/serpen

# ─ Module: greetings.messages ─
message = "Hello"

# ─ Module: greetings.greeting ─
import types
greetings = types.ModuleType('greetings')
greetings.greeting = types.ModuleType('greetings.greeting')
exec('__all__ = ["message"]\nmessage = message', globals(), greetings.greeting.__dict__)

# ─ Entry Module: hello ─
print(greetings.greeting.message)
