crates/serpen/tests/snapshots/stickytape_compatibility_tests__bundled_import_from_as_module.snap
---
source: crates/serpen/tests/stickytape_compatibility_tests.rs
description: Bundled content for import_from_as_module
---
#!/usr/bin/env python3
# Generated by Serpen - Python Source Bundler
# https://github.com/tinovyatkin/serpen

# ─ Module: greetings.greeting ─
import types
greetings = types.ModuleType('greetings')
greetings.greeting = types.ModuleType('greetings.greeting')
exec('message = "Hello"', greetings.greeting.__dict__)

# ─ Module: greetings ─

# ─ Entry Module: hello ─
g = greetings.greeting
print(g.message)
