crates/serpen/tests/snapshots/stickytape_compatibility_tests__bundled_imports_in_imported_modules.snap
---
source: crates/serpen/tests/stickytape_compatibility_tests.rs
description: Bundled content for imports_in_imported_modules
---
#!/usr/bin/env python3

# Generated by Serpen - Python Source Bundler
# https://github.com/tinovyatkin/serpen

# ─ Module: greetings.english ─
message = 'Hello'

# ─ Module: greetings ─

# ─ Entry Module: hello ─
print(message)
