crates/serpen/tests/snapshots/stickytape_compatibility_tests__bundled_module_with_triple_quotes.snap
---
source: crates/serpen/tests/stickytape_compatibility_tests.rs
description: Bundled content for module_with_triple_quotes
---
#!/usr/bin/env python3

# Generated by Serpen - Python Source Bundler
# https://github.com/tinovyatkin/serpen

# ─ Module: greeting ─
import types
greeting = types.ModuleType('greeting')
exec('message = "Hello\\n\'\'\'\\n" + \'"""\'', greeting.__dict__)

# ─ Entry Module: hello ─
print(greeting.message)
