crates/serpen/tests/snapshots/stickytape_compatibility_tests__bundled_script_using_from_to_import_module.snap
---
source: crates/serpen/tests/stickytape_compatibility_tests.rs
description: Bundled content for script_using_from_to_import_module
---
#!/usr/bin/env python3
# Generated by Serpen - Python Source Bundler
# https://github.com/tinovyatkin/serpen
# ─ Module: greetings.greeting ─
import types
greetings = types.ModuleType('greetings')
greetings.greeting = types.ModuleType('greetings.greeting')
exec("""
message = 'Hello'
""", greetings.greeting.__dict__)
greeting = greetings.greeting

# ─ Entry Module: hello ─
print(greeting.message)
