crates/serpen/tests/snapshots/stickytape_compatibility_tests__bundled_script_using_from_to_import_multiple_values.snap
---
source: crates/serpen/tests/stickytape_compatibility_tests.rs
description: Bundled content for script_using_from_to_import_multiple_values
---
#!/usr/bin/env python3
# Generated by Serpen - Python Source Bundler
# https://github.com/tinovyatkin/serpen

# ─ Module: greeting ─
message = 'Hello'
def print_stdout(value):
    print(value)

# ─ Entry Module: hello ─
print_stdout(message)
